# biolccc

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  CHANGELOG  CMakeLists.txt  Doxyfile  INSTALL  MANIFEST.in  README  README.rst  SConstruct  TODO  build.py  doxy.config.in  doxygen.conf.in  pyBioLCCC.README  pyproject.toml  setup.py
.github/workflows/: pythonpublish.yml  tests.yml
doc/: Doxyfile
doc/sphinx/: Makefile  doc-requirements.txt
doc/sphinx/source/: advanced.rst  conf.py  index.rst  install.rst  introduction.rst  tools.rst  tutorial.rst
doc/sphinx/source/_static/: custom.css
include/: BioLCCC.h  aminoacid.h  auxiliary.h  biolccc.h  biolcccexception.h  chain_model.h  chemicalbasis.h  chemicalgroup.h  chromoconditions.h  gradient.h  gradientpoint.h  parsing.h  rod_model.h  terminus.h
src/: BioLCCC.cpp  BioLCCC.h  CMakeLists.txt  aminoacid.cpp  aminoacid.h  auxiliary.hpp  chemicalbasis.cpp  chemicalbasis.h  chromoconditions.cpp  chromoconditions.h  csBioLCCC.i  gradient.cpp  gradient.h  gradientpoint.cpp  gradientpoint.h  main.cpp  peptidemethods.cpp  peptidemethods.h  pyBioLCCC.i  terminus.cpp  terminus.h  tests.cpp  tests.h  theorchromo.i
src/apps/: SConscript  main.cpp  tests.cpp
src/bindings/: SConscript  post_swig.py  pyBioLCCC.i  test_pyBioLCCC.py
src/core/: BioLCCC.cpp  SConscript  auxiliary.cpp  biolccc.cpp  biolcccexception.cpp  chain_model.cpp  chemicalbasis.cpp  chemicalgroup.cpp  chromoconditions.cpp  gradient.cpp  gradientpoint.cpp  parsing.cpp  rod_model.cpp
src/examples/: advanced_chembasis.cpp  advanced_chembasis.py  chemicalbasis.py  chromoconditions.py  chromoconditions_dict.py  dV_accuracy.py  gradient.py  interpolation.py  interpolation_accuracy.py  kd_calculation.py  log_kd.py  mass_calculation.py  rt_calculation.py  sequence_parsing.py  snippet_example.py
src/pyteomics/: SConscript  _biolccc.cpp  biolccc.i  biolccc.py  post_swig.py  test_pyBioLCCC.py
tests/: test_biolccc.py
