PROJECT(BioLCCC)
SET(CMAKE_BUILD_TYPE Debug)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/./bin)

CMAKE_MINIMUM_REQUIRED(VERSION 2.4)

ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/src)

## Adding "doc" target for an automatic docs generation.
#FIND_PACKAGE(Doxygen)
#IF (DOXYGEN_FOUND)
#
#    SET(DOXYGEN_HTMLHELP YES)
#    SET(DOXYGEN_LATEX NO)
#    SET(DOXYGEN_PDFLATEX NO)
#    SET(DOXYGEN_PDF_HYPERLINKS NO)
#    SET(DOXYGEN_EXTRACT_PRIVATE NO)
#    SET(DOXYGEN_EXTRACT_STATIC YES)
#    SET(DOXYGEN_EXTRACT_LOCAL YES)
#    SET(DOXYGEN_EXTRACT_INTERNAL YES)
#    SET(HAVE_DOT YES)
#
#    SET(DOXYGEN_LANGUAGE "English" CACHE STRING "Language used by doxygen")
#    
#    MARK_AS_ADVANCED(DOXYGEN_LANGUAGE)
#
#    SET(DOXYGEN_SOURCE_DIR
#        ${PROJECT_SOURCE_DIR}/src
#        )
#    SET(DOXYGEN_OUTPUT_DIR doc)
#    STRING(REGEX REPLACE ";" " " DOXYGEN_INPUT_LIST "${DOXYGEN_SOURCE_DIR}")
#
#
#    CONFIGURE_FILE(doxygen.conf.in ${CMAKE_CURRENT_BINARY_DIR}/doxygen.conf)
#    SET(HTML_TARGET ${DOXYGEN_OUTPUT_DIR}/index.html)
#    ADD_CUSTOM_TARGET(doc
#                ${DOXYGEN} ${CMAKE_CURRENT_BINARY_DIR}/doxygen.conf
#                DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/doxygen.conf)
#                
#ENDIF(DOXYGEN_FOUND)
